--- a/src/components/BookCard/index.scss
+++ b/src/components/BookCard/index.scss
@@ -1,6 +1,8 @@
 .bookCard {
+  width: 120px;
   display: inline-block;
   flex-direction: column;
+  padding: 10px 20px;
   span {
     display: block;
   }
